# schoolReviews

./: README.md  database.db  package-lock.json  pyproject.toml
frontend/vite_project/: package-lock.json  package.json
frontend/vite_project/src/: App.jsx  App.scss
migrations/models/: 11_20250810174440_None.py  12_20250816192726_users.py
src/: cli.py
src/api/v1/: klass.py  review.py  student.py  teacher.py  user.py
src/certs/: jwt-private.pem  jwt-public.pem
src/core/: abstract.py  config.py  enums.py  lifespan.py
src/database/: class_model.py  review_model.py  student_model.py  teacher_model.py  user_model.py
src/schema/: class_schema.py  enum.py  review_schema.py  student_schema.py  teacher_schema.py  user_schema.py
src/service/: klass_service.py  review_service.py  student_service.py  teacher_service.py  user_service.py
src/utils/: README  exceptions.py
